# eve-shields

./: .coverage  .flake8  .gitignore  .isort.cfg  .travis.yml  README.md  app.py  pyproject.toml  requirements.txt  setup.py  supervisor.conf  tox.ini
.github/workflows/: main.yml
eve-shields/: app.py
eveshields/: __init__.py  app.py  shields.py
tests/: test-data_zkb-stats.json  test_Shield.py  test_app.py  test_shields.py
